--- a/src/css/buttons.less
+++ b/src/css/buttons.less
@@ -1,48 +1,32 @@
-/*!
-@{ui-class-prefix} v0.5.0
-Copyright 2014 Yahoo! Inc. All rights reserved.
-Licensed under the BSD License.
-https://github.com/yui/@{ui-class-prefix}/blob/master/LICENSE.md
-*/
 .@{ui-class-prefix}-button {
     /* Structure */
     display: inline-block;
     *display: inline; /*IE 6/7*/
     zoom: 1;
+
     line-height: normal;
     white-space: nowrap;
     vertical-align: baseline;
     text-align: center;
     cursor: pointer;
     -webkit-user-drag: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
+    .user-select(none);
+    &::-moz-focus-inner {
+        padding: 0;
+        border: 0;
+    }
+    border-radius: @default-border-radius;
 
-/* Firefox: Get rid of the inner focus border */
-.@{ui-class-prefix}-button::-moz-focus-inner {
-    padding: 0;
-    border: 0;
+    font-size: @base-font-size; // reset font-size, since we set font-size 0 on button groups to avoid whitespace.
+    padding: @default-padding;
+    border: 1px solid transparent;  /*IE9 + everything else*/
+    &:hover {
+        text-decoration: none;
+    }
 }
-
-/*csslint outline-none:false*/
 
 .@{ui-class-prefix}-button {
-    font-family: inherit;
-    font-size: 100%;
-    *font-size: 90%; /*IE 6/7 - To reduce IE's oversized button text*/
-    *overflow: visible; /*IE 6/7 - Because of IE's overly large left/right padding on buttons */
-    padding: 0.5em 1em;
-    color: @button-text-IE8-color; /* rgba not supported (IE 8) */
-    color: @button-text-color; /* rgba supported */
-    *color: @button-text-IE8-color; /* IE 6 & 7 */
-    border: 1px solid #999;  /*IE 6/7/8*/
-    border: none rgba(0, 0, 0, 0);  /*IE9 + everything else*/
-    background-color: @button-background-color;
-    text-decoration: none;
-    border-radius: 2px;
+    .button-variant(@default-button-text-color, @default-button-background-color, @default-button-border-color);
 }
 
 .@{ui-class-prefix}-button.fluid {
@@ -50,24 +34,6 @@ https://github.com/yui/@{ui-class-prefix}/blob/master/LICENSE.md
     width: 100%;
 }
 
-.@{ui-class-prefix}-button.icon {
-    padding: 0.5em;
-}
-
-.hover-mixin() {
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#1a000000',GradientType=0);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), color-stop(40%, rgba(0,0,0, 0.05)), to(rgba(0,0,0, 0.10)));
-    background-image: -webkit-linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
-    background-image: -moz-linear-gradient(top, rgba(0,0,0, 0.05) 0%, rgba(0,0,0, 0.10));
-    background-image: -o-linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
-    background-image: linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
-}
-
-.@{ui-class-prefix}-button.hover,
-.@{ui-class-prefix}-button:hover,
-.@{ui-class-prefix}-button:focus {
-    .hover-mixin() !important;
-}
 .@{ui-class-prefix}-button:focus {
     outline: 0;
 }
@@ -81,15 +47,8 @@ https://github.com/yui/@{ui-class-prefix}/blob/master/LICENSE.md
 .@{ui-class-prefix}-button-disabled:hover,
 .@{ui-class-prefix}-button-disabled:focus,
 .@{ui-class-prefix}-button-disabled:active {
-    border: none;
-    background-image: none;
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
-    filter: alpha(opacity=40);
-    -khtml-opacity: 0.40;
-    -moz-opacity: 0.40;
-    opacity: 0.40;
+    .opacity(40);
     cursor: not-allowed;
-    box-shadow: none;
 }
 
 /* Firefox: Get rid of the inner focus border */
@@ -98,64 +57,37 @@ https://github.com/yui/@{ui-class-prefix}/blob/master/LICENSE.md
     border: 0;
 }
 
-.@{ui-class-prefix}-button.primary,
-.@{ui-class-prefix}-button.selected,
-a.@{ui-class-prefix}-button.primary,
-a.@{ui-class-prefix}-button.selected {
-    background-color: rgb(0, 120, 231);
-    color: #fff;
-}
-
-.@{ui-class-prefix}-button.success,
-.@{ui-class-prefix}-button.error,
-.@{ui-class-prefix}-button.warning,
-.@{ui-class-prefix}-button.secondary {
-    color: white;
-    border-radius: 4px;
-    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-}
-
-.@{ui-class-prefix}-button.success {
-    background: rgb(28, 184, 65); /* this is a green */
-}
-
-.@{ui-class-prefix}-button.error {
-    background: rgb(202, 60, 60); /* this is a maroon */
-}
-
-.@{ui-class-prefix}-button.warning {
-    background: rgb(223, 117, 20); /* this is an orange */
-}
-
-.@{ui-class-prefix}-button.secondary {
-    background: rgb(66, 184, 221); /* this is a light blue */
-}
-
 /*--------------------
         Size
 ---------------------*/
 .@{ui-class-prefix}-button.mini {
-  font-size: 0.8125em;
+    font-size: 0.8125em;
 }
 .@{ui-class-prefix}-button.small {
-  font-size: 0.875em;
+    font-size: 0.875em;
 }
 .@{ui-class-prefix}-button.large {
-  font-size: 1.125em;
+    font-size: 1.125em;
 }
 .@{ui-class-prefix}-button.big {
-  font-size: 1.25em;
+    font-size: 1.25em;
 }
 .@{ui-class-prefix}-button.huge {
-  font-size: 1.375em;
+    font-size: 1.375em;
 }
 .@{ui-class-prefix}-button.massive {
-  font-size: 1.5em;
+    font-size: 1.5em;
 }
 
 .@{ui-class-prefix}-button-group {
+    display: inline-block;
+    font-size: 0;
     .@{ui-class-prefix}-button {
-        float: left;
+        font-size: 14px;
+        &:first-child {
+            margin-left: 0px;
+        }
+        margin-left: -1px;
     }
 }
 
