--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1,6 +1,8 @@
-@import "./mixins.less";
-@import "./variable.less";
-@import "./normalize.less";
+@import "./est.less";
+
+//@import "./normalize.less";
+.global-normalize();
+
 @import "./base.less";
 @import "./utils.less";
 @import "./type.less";
@@ -18,4 +20,4 @@
 @import "./menus.less";
 @import "./label.less";
 @import "./checkbox.less";
-@import "./tables.less"; 
+@import "./tables.less";
