--- a/src/css/utils.less
+++ b/src/css/utils.less
@@ -71,4 +71,13 @@
 .pull-right {
     float: right;
 }
+ 
+/* The ghost, nudged to maintain perfect centering */
+.vertical-align:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -0.25em; /* Adjusts for spacing */
+}
 
