--- a/demo.css
+++ b/demo.css
@@ -1,120 +1,105 @@
-/* User CSS */
-#navigator {
-  list-style: none;
-  padding: 0;
-  margin-left: 10px;
+/* =========
+   Inputs
+   ========= */
+/* =========
+   Buttons
+   ========= */
+/* =========
+   Type
+   ========= */
+/* =========
+   Menu
+   ========= */
+/*
+* 
+* ESF 变量，一般不用直接修改这里
+×
+*/
+body > .est-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  height: 3.75em;
 }
-#navigator li a {
-    text-decoration: none;
-    display: block;
-    background-color: #f5f5f5;
-    color: #000;
-    border: 1px solid #a2a2a2;
-    margin-top: -1px;
-    padding: 8px 14px;
+body > .est-body {
+  margin-top: 3.75em;
+  *zoom: 1;
 }
-#navigator li:first-child a {
-    border-radius: 6px 6px 0 0;
+body > .est-body:before,
+body > .est-body:after {
+  display: table;
+  content: "";
 }
-#navigator li:last-child a {
-    border-radius: 0 0 6px 6px;
+body > .est-body:after {
+  clear: both;
 }
-#navigator li a:hover {
-    background-color: #a2a2a2;
-    color: #fff;
+.est-header {
+  background: #d00000;
 }
-#navigator li.cur a{
-    background-color: #a2a2a2;
-    color: #fff;
+.primary-bg-link {
+  color: #fefdfa;
 }
-
-#page {
-    width: 1200px;
-    margin: 0 auto 40px;
+.primary-bg-link:hover {
+  color: #fefdfa;
+  text-decoration: none;
 }
-
-.page-header {
-    background: #252525;
-    margin-bottom: 20px;
+.header-button {
+  padding: 13px 15px;
+  font-size: 32px;
+  line-height: 1;
+  border-radius: 0;
+  vertical-align: top;
 }
-.page-header h1{
-    color: #fff;
-    margin: 0;
+.header-button-nav {
+  padding: 12px 15px;
+  font-size: 1em;
+  line-height: 1;
+  border-radius: 0;
 }
-.view {
-    padding: 20px;
-    line-height: 1.5;
-    background-color: #eee;
-    border-radius: 6px;
-    position: relative;
+.left-menu-separator {
+  border-left: 1px solid #eeeeee !important;
 }
-.viewer {
-    margin: -10px 0 20px -10px;
-    padding: 0;
-    list-style: none;
+.right-menu-separator {
+  border-right: 1px solid #eeeeee !important;
 }
-.viewer li {
-    display: inline-block;
-    *display: inline;
-    zoom: 1;
-    padding: 4px 12px;
-    margin-right: 10px;
-    background-color: #f5f5f5;
-    border: 1px solid #ddd;
-    cursor: default;
+.brand-title {
+  margin-top: 10px;
+  margin-bottom: 0px;
+  display: inline-block;
 }
-.viewer li:hover {
-    background-color: #a2a2a2;
-    color: #fff;
+.brand-title a {
+  color: #fefdfa;
+  font-size: 25px;
 }
-.source {
-    position: absolute;
-    max-height: 480px;
-    top: 25px;
-    left: 10px;
-    right: 10px;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 0 6px 6px 6px;
-    height: 0;
-    overflow: hidden;
-    z-index: 1;
-    background-color: #f5f5f5;
-    font-family: monospace;
-    opacity: 0;
+.brand-title a:hover {
+  color: #fefdfa;
+  text-decoration: none;
 }
-.source-visible {
-    height: auto;
-    overflow: auto;
-    opacity: 1;
-    transition: opacity .2s linear;
+.brand-title a img {
+  vertical-align: bottom;
 }
-
-.fa-hover a {
-    color: #666;
-    display: block;
-    text-decoration: none;
-    padding: 10px;
-    border-radius: 4px;
+.ui-menu.nav > ul > li > a {
+  padding: 16px 21px;
 }
-
-.fa-hover a:hover {
-    background-color: #1d9d74;
-    color: #fff;
-
+#left-nav {
+  width: 59px;
+  background: #d00000;
+  position: fixed;
+  top: 60px;
+  bottom: 0px;
 }
-
-.ui.image {
-    width:300px;
-    position: relative;
-    display: inline-block;
-    vertical-align: middle;
-    max-width: 100%;
-    background-color: rgba(0,0,0,.05);
+#page-footer {
+  background: #555555;
+  color: #eeeeee;
 }
-
-.ui.image img {
-    display: block;
-    max-width: 100%;
-    height: auto;
+#content-container,
+#page-footer {
+  margin-left: 59px;
+}
+#container-frame {
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
