--- a/demo.css
+++ b/demo.css
@@ -1,4 +1,7 @@
 /* =========
+   Type
+   ========= */
+/* =========
    Inputs
    ========= */
 /* =========
@@ -102,4 +105,38 @@ body > .est-body:after {
   width: 100%;
   height: 100%;
   border: 0;
+}
+#navigator-features a {
+  padding: 0.5em 1em;
+  display: block;
+}
+#navigator-features a:hover {
+  background: #eeeeee;
+  text-decoration: none;
+}
+.example {
+  position: relative;
+  padding: 45px 15px 15px;
+  margin-bottom: 15px;
+  border: 1px #e5e5e5 solid;
+}
+/* Echo out a label for the example */
+.example:after {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #959595;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  content: "Example";
+}
+/* Tweak display of the code snippets when following an example */
+.example + .highlight {
+  margin-bottom: 15px;
+  margin-top: -15px;
+  border-width: 0 0 1px;
+  border-radius: 0;
+  position: relative;
 }
