--- a/src/css/type.less
+++ b/src/css/type.less
@@ -71,13 +71,7 @@ blockquote {
 
 // Usage
 a {
-  color: @link-color;
-  text-decoration: none;
-
-  &:hover {
-    color: @link-hover-color;
-    text-decoration: underline;
-  }
+    .link-like();
 }
 
 address {
