--- a/demo.css
+++ b/demo.css
@@ -2,6 +2,9 @@
    Type
    ========= */
 /* =========
+   Input & button height
+   ========= */
+/* =========
    Inputs
    ========= */
 /* =========
@@ -24,10 +27,10 @@ body > .est-header {
   left: 0;
   width: 100%;
   z-index: 1000;
-  height: 3.75em;
+  height: 60px;
 }
 body > .est-body {
-  margin-top: 3.75em;
+  margin-top: 60px;
   *zoom: 1;
 }
 body > .est-body:before,
@@ -49,17 +52,18 @@ body > .est-body:after {
   text-decoration: none;
 }
 .header-button {
-  padding: 13px 15px;
+  padding: 0 15px;
   font-size: 32px;
-  line-height: 1;
   border-radius: 0;
-  vertical-align: top;
+  height: 60px;
+  line-height: 58px;
 }
 .header-button-nav {
-  padding: 12px 15px;
-  font-size: 1em;
-  line-height: 1;
+  padding: 0 12px 15px;
+  font-size: 16px;
   border-radius: 0;
+  height: 60px;
+  line-height: 58px;
 }
 .left-menu-separator {
   border-left: 1px solid #eeeeee !important;
@@ -68,19 +72,11 @@ body > .est-body:after {
   border-right: 1px solid #eeeeee !important;
 }
 .brand-title {
-  margin-top: 10px;
+  margin-left: 80px;
   margin-bottom: 0px;
-  display: inline-block;
+  margin-top: 10px;
 }
-.brand-title a {
-  color: #fefdfa;
-  font-size: 25px;
-}
-.brand-title a:hover {
-  color: #fefdfa;
-  text-decoration: none;
-}
-.brand-title a img {
+.brand-title img {
   vertical-align: bottom;
 }
 .ui-menu.nav > ul > li > a {
@@ -105,6 +101,9 @@ body > .est-body:after {
   width: 100%;
   height: 100%;
   border: 0;
+}
+#navigator-features {
+  position: fixed;
 }
 #navigator-features a {
   padding: 0.5em 1em;
@@ -140,3 +139,4 @@ body > .est-body:after {
   border-radius: 0;
   position: relative;
 }
+/* buttons */
