--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,6 +2,9 @@
    Type
    ========= */
 /* =========
+   Input & button height
+   ========= */
+/* =========
    Inputs
    ========= */
 /* =========
@@ -1397,7 +1400,6 @@ textarea:focus {
 }
 .ui-button {
   display: inline-block;
-  line-height: 1;
   white-space: nowrap;
   text-align: center;
   cursor: pointer;
@@ -1406,11 +1408,10 @@ textarea:focus {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  border-radius: 5px;
-  font-size: 16px;
-  padding: 10px 16px;
   border: 1px solid transparent;
-  /*IE9 + everything else*/
+  box-sizing: border-box;
+  vertical-align: middle;
+  font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimSun, "宋体", STXihei, "华文细黑", sans-serif;
 }
 .ui-button::-moz-focus-inner {
   padding: 0;
@@ -1419,19 +1420,103 @@ textarea:focus {
 .ui-button:hover {
   text-decoration: none;
 }
-.ui-button.ui-icon-button {
-  padding: 10px;
-}
 .ui-button {
   color: #ffffff;
-  background-color: #d00000;
-  border-color: #d00000;
+  background-color: #777777;
+  border-color: #777777;
+  padding: 0 16px;
+  font-size: 16px;
+  border-radius: 5px;
+  height: 40px;
+  line-height: 38px;
 }
 .ui-button:hover,
 .ui-button.hover {
   color: #ffffff;
+  background-color: #5e5e5e;
+  border-color: #585858;
+}
+.ui-button-primary {
+  color: #ffffff;
+  background-color: #d00000;
+  border-color: #d00000;
+}
+.ui-button-primary:hover,
+.ui-button-primary.hover {
+  color: #ffffff;
   background-color: #9d0000;
   border-color: #930000;
+}
+.ui-button-secondary {
+  color: #ffffff;
+  background-color: #137cbd;
+  border-color: #137cbd;
+}
+.ui-button-secondary:hover,
+.ui-button-secondary.hover {
+  color: #ffffff;
+  background-color: #0e5e8f;
+  border-color: #0d5885;
+}
+.ui-button-success {
+  color: #ffffff;
+  background-color: #00bd3c;
+  border-color: #00bd3c;
+}
+.ui-button-success:hover,
+.ui-button-success.hover {
+  color: #ffffff;
+  background-color: #008a2c;
+  border-color: #008029;
+}
+.ui-button-danger {
+  color: #ffffff;
+  background-color: #d4440b;
+  border-color: #d4440b;
+}
+.ui-button-danger:hover,
+.ui-button-danger.hover {
+  color: #ffffff;
+  background-color: #a43408;
+  border-color: #9a3108;
+}
+.ui-button-info {
+  color: #ffffff;
+  background-color: #137cbd;
+  border-color: #137cbd;
+}
+.ui-button-info:hover,
+.ui-button-info.hover {
+  color: #ffffff;
+  background-color: #0e5e8f;
+  border-color: #0d5885;
+}
+.ui-button-warning {
+  color: #ffffff;
+  background-color: #f35b1f;
+  border-color: #f35b1f;
+}
+.ui-button-warning:hover,
+.ui-button-warning.hover {
+  color: #ffffff;
+  background-color: #d4440b;
+  border-color: #ca410b;
+}
+.ui-button-link {
+  color: #555555;
+  text-decoration: none;
+  background: none;
+  border: 0;
+}
+.ui-button-link:hover {
+  color: #2f2f2f;
+  text-decoration: underline;
+}
+.ui-button-link:hover {
+  background: none;
+}
+.ui-icon-button {
+  padding: 0 10px;
 }
 .ui-button.fluid {
   display: block;
@@ -1446,9 +1531,9 @@ textarea:focus {
 }
 .ui-button[disabled],
 .ui-button.disabled,
-.ui-button-disabled:hover,
-.ui-button-disabled:focus,
-.ui-button-disabled:active {
+.ui-button.disabled:hover,
+.ui-button.disabled:focus,
+.ui-button.disabled:active {
   opacity: 0.4;
   filter: alpha(opacity=40);
   cursor: not-allowed;
@@ -1462,29 +1547,53 @@ textarea:focus {
         Size
 ---------------------*/
 .ui-button.mini {
-  font-size: 0.8125em;
+  padding: 0 13px;
+  font-size: 13px;
+  border-radius: 5px;
+  height: 32.5px;
+  line-height: 30.5px;
 }
 .ui-button.small {
-  font-size: 0.875em;
+  padding: 0 14px;
+  font-size: 14px;
+  border-radius: 5px;
+  height: 35px;
+  line-height: 33px;
 }
 .ui-button.large {
-  font-size: 1.125em;
+  padding: 0 18px;
+  font-size: 18px;
+  border-radius: 5px;
+  height: 45px;
+  line-height: 43px;
 }
 .ui-button.big {
-  font-size: 1.25em;
+  padding: 0 20px;
+  font-size: 20px;
+  border-radius: 5px;
+  height: 50px;
+  line-height: 48px;
 }
 .ui-button.huge {
   font-size: 1.375em;
+  padding: 0 22px;
+  font-size: 22px;
+  border-radius: 5px;
+  height: 55px;
+  line-height: 53px;
 }
 .ui-button.massive {
-  font-size: 1.5em;
+  padding: 0 24px;
+  font-size: 24px;
+  border-radius: 5px;
+  height: 60px;
+  line-height: 58px;
 }
 .ui-button-group {
   display: inline-block;
   font-size: 0;
 }
 .ui-button-group .ui-button {
-  font-size: 14px;
   margin-left: -1px;
 }
 .ui-button-group .ui-button:first-child {
