--- a/src/css/palette.less
+++ b/src/css/palette.less
@@ -1,4 +1,4 @@
-
+@white:                  #fff;
 @gray-darker:            lighten(#000, 13.5%); // #222
 @gray-dark:              lighten(#000, 20%);   // #333
 @gray:                   lighten(#000, 33.5%); // #555
